--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="cse.opa.and" />
+                <action android:name="cse.opa.and.MAINACTIVITY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -30,7 +30,9 @@
             android:label="@string/title_activity_topology"
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".Report" />
-        <activity android:name=".ListOfTopologies"></activity>
+        <activity android:name=".ListOfTopologies" />
+        <activity android:name=".SignUp" />
+        <activity android:name=".SignIn" />
     </application>
 
 </manifest>
