--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".Activity.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -17,15 +17,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TopologyActivity"
+            android:name=".Activity.TopologyActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_topology" />
-        <activity android:name=".ReportActivity" />
+        <activity android:name=".Activity.ReportActivity" />
         <activity android:name=".ListOfTopologies" />
-        <activity android:name=".SignupActivity"
+        <activity android:name=".Activity.SignupActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
-        <activity android:name=".LoginActivity"
+        <activity android:name=".Activity.LoginActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
     </application>
